--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "description": "Provides real-time sychronization for ruby on rails",
   "version": "0.0.1",
   "dependencies": {
-    "socket.io": "1.3.x",
-    "redis": "0.12.1",
+    "socket.io": "1.4.x",
+    "redis": "2.x",
     "underscore": "1.8.3",
-    "cookie": "0.1.x",
-    "forever": "0.14.x",
-    "forever-monitor": "1.5.x"
+    "cookie": "0.2.x",
+    "forever": "0.15.x",
+    "forever-monitor": "1.7.x"
   },
   "repository": {
     "type": "git",
